??? ??, 2008 - 5.0:

// TODO Refactor AST
	o SimpleNode.dump() needs to be implemented as a Visitor

TODO - Release blockers - Must implement before this release can be finished
   o Change RuleSets to not specify Language.  Rule's have already been modified
     to specify language.
   o Additional changes to Rule organization withing RuleSets as discussed on
     this forum thread:
     http://sourceforge.net/forum/forum.php?thread_id=1323593&forum_id=188194
   o Adapt PMD command line to have multiple -lang options  (should be cummulative). 
   	 Change PMD AntTask options to allow specifying both language and if
     relevant language version. (assigned to rpelisse)
   o CPD needs work on use of Language.  It currently is hardcoded to only
     handled Java 1.4.  Integrate CPD needs into core PMD where appropriate.
     Otherwise, drive CPD behavior based off of core PMD, instead of duplicating
     some logic.
   o Do we have a rule to style check for multiple declarations and chained
     assignments? (e.g. int a, b;  int a = b = x;)
   o Remove the type resolution specific rules.  Merge these back into the
     standard rules.  In general, a Rule should use TR when it can, and fall
     back on non-TR approach otherwise.  No need for separate Rules for TR/non-TR.
   o Need a JUnit test to check for "dead" Rules, that is those not used by any RuleSet.
   o Rule JUnit tests should verify the Test class follows expected naming
     conventions just like the Rules need to.
   o Need to organize the ruleset XML files based upon Language.  Need to come
     up with a solution for the "rulesets.properties" files.
   o Need a more flexible and powerful scheme for classifying files to various
     Languages.  At a minimum, should have the ability to specify which
     file extensions you want to be used for a language (e.g. not everyone uses
     .jsp for JSP extensions, some use .jspx, .xhtml, etc.).  Also, consider